--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.11.0",
     "react-toastify": "^9.1.2",
     "react-tooltip": "^5.11.1",
